--- a/style.css
+++ b/style.css
@@ -24,8 +24,9 @@ body{
      padding: 15px;
 }
 
-.contents h2{
+.contents h1{
     color: hsl(218, 44%, 22%);
+    font-size: 30px;
 }
 
 .contents p{
